appId: com.tomasmach.pauzer
---
- launchApp:
    clearState: true
- assertVisible:
    id: "preset-60"
- longPressOn:
    id: "preset-60"
- tapOn:
    id: "delete-preset-confirm"
- assertNotVisible:
    id: "preset-60"
